--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -12,7 +12,8 @@ body {
     background-color: rgba(24, 24, 24, 0.95);
     color:rgb(13, 184, 107); 
     padding: 0.5rem;
-    height: auto;
+    height: 6rem;
+    margin: auto;
 }
 
 .QuoteBox p {
