--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,8 +4,9 @@ body {
 
 .App {
     background-image: url(../rick_and_morty_by_sawuinhaff_horizontal.png);
-    background-size: contain; 
-    background-repeat: repeat-y;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .QuoteBox {
@@ -21,38 +22,57 @@ body {
 
 
 form { /*filter*/
-    max-width: 40rem;
-    margin:5px auto;
-    padding: 10px;
+    /* max-width: 40rem;
+    margin:5px auto; */
+    padding: 5px;
     color: rgb(34, 189, 116);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap:wrap;
     background-color: rgba(32, 32, 32, 0.699);
-    border-radius: 2rem;
+    /* border-radius: 2rem; */
 }
 
 select, input, button, .ChangePageBox p {
     padding: 8px;
     color:rgb(13, 184, 107); 
-    background-color: rgba(29, 29, 29);
-    border-color: rgba(0, 31, 16);
-    border-radius: 2rem;
+    background-color: rgba(24, 24, 24, 0.95);
+    border-color: rgba(24, 24, 24, 0.95);
+    border-radius: 1.5rem;
     border-style: solid;
     box-decoration-break: slice;
-
 }
-
+select {
+    border-radius: 0;
+}
+input {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+form button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-style: hidden;
+    border-color: rgba(13, 184, 107);
+    border-left-color: rgba(0, 31, 16);
+    background-color: rgb(13, 184, 107); 
+    color:rgba(0,31,16);
+}
 textarea:focus, input:focus, button:focus, select:focus{
     outline: none;
 }
 
-button {
-    border-color: rgb(7, 100, 58); 
-}
+
+
 button:hover, input:hover, select:hover {
-    background-color: rgba(39, 39, 39);
+    background-color: rgb(36, 38, 36);
     border-color: rgb(13, 184, 107);
     box-shadow: inset rgba(24, 24, 24, 0.733) 2px 2px 10px;
+}
+
+form button:hover {
+    background-color:rgb(13, 184, 107);
+    border-color:rgb(16, 65, 43);
 }
 
 .ChangePageBox {
@@ -61,7 +81,7 @@ button:hover, input:hover, select:hover {
     padding: 10px;
     display: flex;
    
-    background-color: rgba(32, 32, 32, 0.699);
+    /* background-color: rgba(32, 32, 32, 0.699); */
     border-radius: 2rem;
 }
 .ChangePageBox button{
@@ -72,7 +92,7 @@ button:hover, input:hover, select:hover {
 }
 
 .CardListBox {
-    width: 96vw;
+    width: 98vw;
     margin: 0 auto;
     padding: 0 auto;
     color: rgb(34, 189, 116);    
@@ -86,12 +106,48 @@ button:hover, input:hover, select:hover {
 }
 
 .Card {
-    background-color:rgba(29, 29, 29, 0.918);
+    background-color:rgba(22, 22, 22, 0.918);
     color:rgb(13, 184, 107); 
-    width: 220px;
+    width: auto;
+    max-width: 170px;
+    height: 220px;
+    margin: 3px;
+    padding: 8px;
+    border-radius: 0.5rem;
     /* max-width: 300px;
     min-width: 60px; */
     /* should make width fixed amount at small or big screensizes*/   
+}
+
+.Card img {
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+.Card h3 {
+    height: 45px;
+}
+
+.Card p {
+    margin: 0 auto;
+    padding: 0 auto;
+}
+
+.Gender {
+    float: left;
+}
+
+.DeadSign {
+    float: right;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color:rgba(13, 184, 107);
+    border-radius: 50%;
+    border-style:solid;
+    background-image: url(../skull.png);
+    background-size: cover;
 }
 
 .ErrorBox {
@@ -121,5 +177,7 @@ button:hover, input:hover, select:hover {
     .App {
         background-image: url(../rick_and_morty_by_sawuinhaff_vertical.png);
         background-size: auto;
+        background-position:top;
+        background-repeat: repeat-y;
     }        
 }
