--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -10,6 +10,7 @@ body {
     background-size: cover; 
     background-repeat: no-repeat;
     background-position: center;
+    min-height: 100vh;
 }
 
 .HeaderBox {
@@ -37,7 +38,7 @@ form { /*filter*/
     color: rgb(34, 189, 116);
     display: flex;
     padding:0.5rem 1rem;
-    /* background-color: rgba(32, 32, 32, 0.699); */
+    /* background-color: rgba(241, 0, 0, 0.699); */
     /* border-radius: 2rem; */
 }
 
@@ -93,7 +94,7 @@ form button:active {
 }
 
 .ChangePageBox {
-    margin: auto;
+    margin: 1rem auto;
     width: 20rem;
     padding: 10px;
     display: flex;
@@ -114,10 +115,11 @@ form button:active {
 }
 
 .CardListBox {
-    width: 97vw;
+    width: 97%;
     margin: 0 auto;
     padding: 0 auto;
-    color: rgb(34, 189, 116);    
+    color: rgb(34, 189, 116);
+    min-height:80vh;  
 }
 
 .CardList {
@@ -125,6 +127,7 @@ form button:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
 }
 
 .Card {
@@ -132,7 +135,7 @@ form button:active {
     color:rgb(13, 184, 107); 
     width: auto;
     max-width: 180px;
-    height: 220px;
+    height: auto;
     margin: 3px;
     padding: 8px;
     border-radius: 0.5rem;
@@ -143,15 +146,16 @@ form button:active {
 }
 
 .Card img {
-    width: 100px;
-    height: 100px;
+    width: 6rem;
+    height: 6rem;
     display: block;
     margin: 0 auto;
 }
 
 .Card h3 {
     margin-bottom: 0;
-    height: 3.85rem;
+    height: auto;
+    min-height:3.85rem;
 }
 .Card h4 {
     margin: 0;
@@ -160,6 +164,7 @@ form button:active {
 .Card p {
     margin: 0 auto;
     padding: 0 auto;
+    display:block;
 }
 
 
@@ -179,14 +184,18 @@ form button:active {
 }
 
 .ErrorBox {
-    width:100vw;
-    height: 31rem;
+    width:100%;
+    height: 30rem;
 }
 
 .FooterBox {
     background-color:rgba(24, 24, 24, 0.95);
-    padding: 10px 0 10px 0;
-    margin: 10px auto 0 auto;
+    /* padding: 10px 0 10px 0;
+    margin: 10px auto 0 auto; */
+    bottom:0;
+    height:fill;
+    padding: 1rem;
+    margin-top: 1rem;
 }
 
 .FooterBox p {
@@ -205,12 +214,16 @@ form button:active {
     .HeaderBox {
         height: 7.5rem;
     }
+    .ChangePageBox {
+        margin:0 auto;
+    }
 }
 
 @media (max-width:1000px){
     .HeaderBox {
         height: 9rem;
     }
+    
 }
 
 @media (max-width:900px){  
@@ -224,15 +237,44 @@ form button:active {
         flex-wrap: wrap;
         height: 11em;
     }
+    .CardListBox{
+        width: 96%;
+    }
     form {
         padding-top:0;
         margin: auto;
         margin-bottom:0.5rem;
     }
+    
 } 
 
 @media (max-width: 600px) {
     .HeaderBox {
         height: 13.5em;
+    }
+    
+    .Card {
+        max-width: 7rem; 
+        padding: 0.2rem;
+    }
+    .Card img {
+        height:3.5rem;
+        width:3.5rem;
+    }
+    .Card h3, .Card h4,.Card p {
+        font-size: 0.8rem;
+        margin: 0;
+    }
+    .Card h3 {
+        height:auto;
+        min-height:2rem;
+    }
+    .DeadSign {
+        width:1rem;
+        height:1rem;
+    }
+    select, input, button, .ChangePageBox p {
+        padding: 0px;
+        height: 1.7rem;
     }
 }
