--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -133,11 +133,11 @@ form button:active {
     border-color: rgb(24, 30, 26);
 }
 
-.CardListBox { /*!this box is parent of form*/
+.CardListBox {
     width: 97%;
     margin: auto;
     padding: auto;
-    min-height:85vh;
+    min-height:84vh;
     display: block;
     flex-direction: column;
     align-items: center;
@@ -149,7 +149,7 @@ form button:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
+    align-content: center;
 }
 
 .Card {
@@ -159,8 +159,7 @@ form button:active {
     height: 150px;
     margin: 0.5rem;
     border-radius: 0.5rem; 
-    display:flex;  
-    /* should make width fixed amount at small or big screensizes*/   
+    display:flex;
 }
 .CardInfo {
     width: 250px;
@@ -172,9 +171,10 @@ form button:active {
 .Card img {
     opacity: 100%;
     height: 150px;
+    width: 150px;
     border-top-left-radius:0.5rem;
     border-bottom-left-radius: 0.5rem;
-    opacity: 100%;
+    opacity: 1;
 }
 
 .Card h3 {
@@ -225,7 +225,7 @@ form button:active {
     background-image: url(../skull.png);
     background-size: cover;
     position: absolute;
-    opacity: 5%;
+    opacity: 0.1;
 }
 
 .ErrorBox {
