--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -51,7 +51,7 @@ select, input, button, .ChangePageBox p {
     height: 35px;
     color: $color4; 
     background-color: $colorDark;
-    border-color: $colorDarkL;
+    border-color: $colorDark;
     border-radius: 1.5rem;
     border-style: solid;
     box-decoration-break: slice;
@@ -228,7 +228,7 @@ form button:active {
 }
 
 .FooterBox p {
-    color: $color1;
+    color: $color3;
     text-align: center;
     padding: 3px;
     margin: 4px auto;
@@ -236,7 +236,7 @@ form button:active {
 
 .FooterBox p a {
     font-style: italic;
-    color: $color7;
+    color: $color2;
     
 }
 .FooterBox p a:hover {
